--- a/src/main/resources/templates/layouts/defaultLayout.html
+++ b/src/main/resources/templates/layouts/defaultLayout.html
@@ -82,7 +82,7 @@
                         <a th:href="@{/signUp}">JOIN</a>
                     </li>
                     <li>
-                        <a href="cart.html">CART</a>
+                        <a th:href="@{/cart}">CART</a>
                     </li>
                     <li>
                         <a th:href="@{/orders}">ORDER</a>
@@ -240,7 +240,7 @@
                             </div>
                         </li>
                         <li>
-                            <a href="cart.html">Cart / 0</a>
+                            <a th:href="@{/cart}">Cart / 0</a>
                         </li>
                     </ul>
                 </div>
