--- a/src/main/resources/static/css/pages/_cart.scss
+++ b/src/main/resources/static/css/pages/_cart.scss
@@ -1,4 +1,3 @@
-/* cart page start */
 .cart_header {
     margin: 0px auto 60px;
 
@@ -17,204 +16,327 @@
 
 .cart_body {
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 60px;
 
-    table {
-        font-size: 12px;
+    .table_box {
+        .title {
+            margin: 40px 0 10px 10px;
 
-        thead {
-            th {
-                padding: 15px 0 14px;
-                border-bottom: 1px solid #e5e5e5;
+            h3 {
                 color: #353535;
-                vertical-align: middle;
-                font-weight: normal;
-                background: #fff;
-                text-align: center;
+                font-size: 12px;
+                font-weight: bold;
             }
         }
 
-        tbody {
-            vertical-align: middle;
-            text-align: center;
+        table {
+            table-layout: fixed;
+            width: 100%;
+            border-spacing: 0;
+            border-collapse: collapse;
+            position: relative;
+            margin: 10px 0 0;
+            border: 1px solid #e5e5e5;
+            border-top: 1px solid #e5e5e5;
+            border-right: none;
+            border-left: none;
+            line-height: 1.7;
+            font-size: 11px;
+            letter-spacing: 0.0em !important;
+            color: #353535;
 
-            tr {
-                td {
-                    padding: 15px 5px 14px;
-                    border-top: 1px solid #e5e5e5;
-                    color: #353535;
+            thead {
+                tr {
+                    th {
+                        text-align: center;
+                        padding: 15px 0 14px;
+                        vertical-align: middle;
+                        font-weight: normal;
+                        background-color: #fff;
 
-
-                    a {
-                        width: 90px;
-                        margin: 1px 0;
-
-                        img {
-                            // margin: 20px;
+                        input[type=checkbox] {
+                            position: relative;
+                            top: 3px;
                         }
                     }
+                }
+            }
 
-                    a.btn_submit {
-                        display: inline-block;
-                        padding: 4px 8px;
-                        border: 1px solid transparent;
-                        border-radius: 0px;
-                        font-size: 12px;
-                        line-height: 18px;
-                        font-weight: normal;
-                        text-decoration: none;
-                        word-spacing: -0.5px;
-                        letter-spacing: 0;
-                        white-space: nowrap;
-                        color: #fff;
-                        background-color: #000;
-                    }
+            tbody {
+                tr {
+                    td {
+                        border-top: 1px solid #e5e5e5;
+                        text-align: center;
+                        vertical-align: middle;
+                        padding: 15px 0;
+                        height: 135px;
 
-                    a.btn_normal {
-                        display: inline-block;
-                        padding: 4px 8px;
-                        border: 1px solid #e2e2e2;
-                        border-radius: 0px;
-                        font-size: 12px;
-                        line-height: 18px;
-                        font-weight: normal;
-                        text-decoration: none;
-                        word-spacing: -0.5px;
-                        letter-spacing: 0;
-                        white-space: nowrap;
-                        color: #222;
-                        background-color: #fff;
+                        &.order_date {
+                            letter-spacing: -0.5px;
+                        }
+
+                        &.thumb {
+                            img {
+                                width: 80px;
+                                height: 110px;
+                            }
+                        }
+
+                        &.product {
+                            .name a {
+                                color: #353535 !important;
+                            }
+
+                            .option {
+                                color: #757575;
+                                margin-top: 9px;
+                            }
+                        }
+
+                        &.left_top {
+                            text-align: left;
+                            vertical-align: top;
+                        }
+
+                        button {
+                            font-size: 11px !important;
+                            padding: 0 !important;
+                            margin-bottom: 2px;
+                            height: 28px !important;
+                        }
+
+                        .cnt_box {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            input {
+                                width: 35px;
+                                height: 25px;
+                                line-height: 20px;
+                                border: 1px solid #CCCCCC;
+                                border-top-left-radius: 2px;
+                                border-bottom-left-radius: 2px;
+                                padding-left: 2px;
+                            }
+
+                            .cnt_btn {
+                                display: flex;
+                                flex-direction: column;
+
+                                i {
+                                    background: transparent;
+                                    outline: none;
+                                    border: 1px solid #CCCCCC;
+                                    width: 25px;
+                                    height: 12.5px;
+                                    text-align: center;
+                                    vertical-align: middle;
+                                    border-top-right-radius: 2px;
+                                    border-bottom-right-radius: 2px;
+                                    border-left: none;
+                                    cursor: pointer;
+
+                                    &::before {
+                                        font-size: 10px;
+                                        vertical-align: top;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
 
-                td.left {
-                    padding-left: 20px;
-                    text-align: left;
+                &.center {
+                    text-align: center;
                 }
             }
         }
-    }
-}
 
-.cart_total {
-    width: 100%;
-    margin: 0 auto;
-
-    table {
-        font-size: 12px;
-        text-align: center;
-
-        thead {
-            vertical-align: middle;
-
-            th {
-                padding: 15px 0 14px;
-                border-bottom: 1px solid #e5e5e5;
-                color: #353535;
-                font-weight: normal;
-                background: #fff;
-                font-size: 15px;
-                font-weight: bold;
-            }
-
+        p {
+            margin: -1px 0 0;
+            border-bottom: 1px solid #ddd;
+            padding: 50px 0;
+            text-align: center;
+            color: #757575;
+            font-weight: normal;
+            font-size: 12px;
         }
 
-        tbody {
-            vertical-align: middle;
+        .pagination {
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
-            td {
-                padding: 15px 5px 14px;
-                border-top: 1px solid #e5e5e5;
-                color: #353535;
-                font-size: 16px;
-                font-weight: bold;
+            ul {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 10px 20px;
+                line-height: 50px;
+                font-size: 13px;
 
-                span {
-                    font-size: 23px;
+                li {
+                    margin: 0 15px;
+
+                    a {
+                        color: #999;
+                    }
+                }
+
+                li.disabled {
+                    pointer-events: none;
+                }
+
+                .page {
+                    text-align: center;
+                }
+
+                .page:hover a {
+                    color: #000;
                     font-weight: bold;
                 }
 
-                a {
-                    width: 90px;
-                    margin: 1px 0;
+                .page.active a {
+                    color: #000;
+                    font-weight: bold;
+                    text-decoration-line: underline;
                 }
 
-                a.btn_submit {
-                    display: inline-block;
-                    padding: 4px 8px;
-                    border: 1px solid transparent;
-                    border-radius: 0px;
-                    font-size: 12px;
-                    line-height: 18px;
-                    font-weight: normal;
-                    text-decoration: none;
-                    word-spacing: -0.5px;
-                    letter-spacing: 0;
-                    white-space: nowrap;
-                    color: #fff;
-                    background-color: #000;
+                .prev,
+                .next {
+                    color: rgba(50, 50, 50, 1);
+                    font-size: 13px;
                 }
 
-                a.btn_normal {
-                    display: inline-block;
-                    padding: 4px 8px;
-                    border: 1px solid #e2e2e2;
-                    border-radius: 0px;
-                    font-size: 12px;
-                    line-height: 18px;
-                    font-weight: normal;
-                    text-decoration: none;
-                    word-spacing: -0.5px;
-                    letter-spacing: 0;
-                    white-space: nowrap;
-                    color: #222;
-                    background-color: #fff;
+                .prev {
+                    margin-right: 20px;
+
                 }
 
-                &.left {
-                    padding-left: 20px;
-                    text-align: left;
+                .next {
+                    margin-left: 20px;
+                }
+            }
+        }
+    }
+
+    .cart_null {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        text-align: center;
+        font-size: 11px;
+        color: #707070;
+        font-weight: bold;
+    }
+
+    .cart_total {
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 60px;
+
+        table {
+            font-size: 12px;
+            text-align: center;
+
+            thead {
+                vertical-align: middle;
+
+                tr {
+                    th {
+                        padding: 15px 0 14px;
+                        border-bottom: 1px solid #e5e5e5;
+                        color: #353535;
+                        font-weight: normal;
+                        background: #fff;
+                        font-size: 15px;
+                        font-weight: bold;
+                    }
+                }
+
+            }
+
+            tbody {
+                vertical-align: middle;
+
+                tr {
+                    td {
+                        padding: 15px 5px 14px;
+                        border-top: 1px solid #e5e5e5;
+                        color: #353535;
+                        font-size: 16px;
+                        font-weight: bold;
+
+                        span {
+                            font-size: 23px;
+                            font-weight: bold;
+                        }
+
+                        a {
+                            width: 90px;
+                            margin: 1px 0;
+
+                            img {
+                                // margin: 20px;
+                            }
+                        }
+
+                        a.btn_submit {
+                            display: inline-block;
+                            padding: 4px 8px;
+                            border: 1px solid transparent;
+                            border-radius: 0px;
+                            font-size: 12px;
+                            line-height: 18px;
+                            font-weight: normal;
+                            text-decoration: none;
+                            word-spacing: -0.5px;
+                            letter-spacing: 0;
+                            white-space: nowrap;
+                            color: #fff;
+                            background-color: #000;
+                        }
+
+                        a.btn_normal {
+                            display: inline-block;
+                            padding: 4px 8px;
+                            border: 1px solid #e2e2e2;
+                            border-radius: 0px;
+                            font-size: 12px;
+                            line-height: 18px;
+                            font-weight: normal;
+                            text-decoration: none;
+                            word-spacing: -0.5px;
+                            letter-spacing: 0;
+                            white-space: nowrap;
+                            color: #222;
+                            background-color: #fff;
+                        }
+                    }
+
+                    td.left {
+                        padding-left: 20px;
+                        text-align: left;
+                    }
                 }
             }
         }
     }
 }
+
+
 
 .cart_btn {
     position: relative;
     margin: 10px 0 40px;
     text-align: center;
 
-    a {
-        width: 130px;
-        padding: 10px 16px;
-        display: inline-block;
-        border: 1px solid transparent;
-        border-radius: 0;
-        font-size: 13px;
-        line-height: 18px;
-        text-decoration: none;
-        vertical-align: middle;
-        word-spacing: -0.5px;
-        letter-spacing: 0;
-        text-align: center;
-        white-space: nowrap;
-        color: #fff;
-        background-color: #151515;
-    }
-
-    .option_order,
-    .resume {
-        border: 1px solid #e2e2e2;
-        color: #222;
-        background-color: #fff;
-    }
-
     span {
         position: absolute;
         top: 0px;
         right: 0;
-
-        a {}
     }
 }
