--- a/src/main/resources/templates/main/item/itemDtl.html
+++ b/src/main/resources/templates/main/item/itemDtl.html
@@ -208,12 +208,12 @@
                     alert("주문이 완료 되었습니다.");
                     location.href = "/";
                 },
-                error: function (jqXHR, status, error) {
-                    if (jqXHR.status === '401') {
+                error: function (request, status, error) {
+                    if (request.status === '401') {
                         alert("로그인 후 이용해주세요.");
                         location.href = '/login';
                     } else {
-                        alert(jqXHR.responseText);
+                        alert(request.responseText);
                     }
                 },
             })
@@ -238,12 +238,12 @@
                     alert("상품을 장바구니에 담았습니다.");
                     location.href = '/';
                 },
-                error: function (jqXHR, status, error) {
-                    if (jqXHR.status === '401') {
+                error: function (request, status, error) {
+                    if (request.status === '401') {
                         alert('로그인 후 이용해주세요.');
                         location.href = '/login';
                     } else {
-                        alert(jqXHR.responseText);
+                        alert(request.responseText);
                     }
                 },
             })
